[project]
name = "yet_another_wizz"
dynamic = ["version"]
authors = [
    {name = "Jan Luca van den Busch", email = "jlvdb@astro.ruhr-uni-bochum.de"},
]
description = "Implementation of the Schmidt et al. (2013) clustering redshift method."
readme = "README.rst"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
requires-python = ">=3.10"
dependencies = [
    "astropy",
    "deprecated",
    "h5py",
    "numpy>=2.0",
    "pyarrow",
    "pyyaml",
    "scipy",
    "StrEnum",  # enum.StrEnum python 3.11+ only
    "treecorr>=4.3",
    "typing-extensions",  # typing.Self python 3.11+ only
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/yaw/_version.py"

[project.optional-dependencies]
plot = [
    "matplotlib",
]
mpi = [
    "mpi4py",
]
healpix = [
    "healpy",
]
docs = [
    "sphinx",
    "sphinx-design",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]
style = [
    "black",
    "isort",
    "flake8",
    "pre-commit",
]
test = [
    "yet_another_wizz[plot]",
    "yet_another_wizz[healpy]",
    "coverage",
    "pytest",
    "pytest-cov",
]
dev = [
    "yet_another_wizz[docs]",
    "yet_another_wizz[test]",
    "yet_another_wizz[style]",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
yaw = [
    "examples/*.hdf",
    "examples/*.dat",
    "examples/*.cov",
    "examples/*.smp",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--cov=yaw",
    "--cov-report=xml",
    "--cov-report=term",
]

[tool.isort]
profile = "black"
skip_glob = ["*_version.py"]

[tool.black]
include = ".pyi?$"
exclude = """
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
"""
extend-exclude = "_version.py$"
