[metadata]
name = yet_another_wizz
version = attr: yaw.__version__
author = Jan Luca van den Busch
description = Implementation of the Schmidt et al. (2013) clustering redshift method and wrapper scripts to produce cross-correlation (CC) redshifts.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
repository = https://github.com/jlvdb/yet_another_wizz
readme = README.md

[options]
packages = find:
python_requires = >=3.8
install_requires =
    typing_extensions
    numpy
    pyarrow
    tqdm
    h5py
    pandas
    astropandas
    scipy
    astropy
scripts =
    bin/yaw

[options.extras_require]
treecorr =
    treecorr>=4.3
jupyter =
    jupyter
    matplotlib
dev =
    yet_another_wizz[treecorr]
    yet_another_wizz[jupyter]
    pytest
    coverage
