[metadata]
name = yet_another_wizz
version = attr: yaw.__version__
author = Jan Luca van den Busch
description = Implementation of the Schmidt et al. (2013) clustering redshift method and wrapper scripts to produce cross-correlation (CC) redshifts.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
repository = https://github.com/jlvdb/yet_another_wizz
readme = README.md

[options]
packages = find:
python_requires = >=3.9
install_requires =
    typing_extensions;python_version<'3.10'
    numpy
    pyarrow
    tqdm
    h5py
    pandas
    astropandas
    scipy
    astropy
    treecorr>=4.3
    matplotlib
scripts =
    bin/yaw

[options.extras_require]
docs =
    sphinx
    sphinx-design
    pydata-sphinx-theme
dev =
    typing_extensions
    yet_another_wizz[docs]
    pytest
    coverage

[build_sphinx]
project = yet_another_wizz
source-dir = docs/source
build-dir = docs/build
